04/oddo/oddo-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oddo
  labels:
    app: oddo
  namespace: oddo-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oddo
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: oddo
    spec:
      containers:
        - image: bitnami/odoo:16
          imagePullPolicy: IfNotPresent
          name: oddo
          ports:
            - containerPort: 8069
