04/oddo/oddo-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oddo-ingress
  namespace: oddo-demo
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /()(.*)
            pathType: Prefix
            backend:
              service:
                name: oddo
                port:
                  number: 8069
